boinc (5.2.15-2) unstable; urgency=low

  * NOT RELEASED YET
  * Uploaded to Debian (closes #281890).
  
  [ Frank S. Thomas ]
  * Added boinc-manager.README.Debian to explain how to set the web browser
    that the BOINC Manager uses.

 -- Frank S. Thomas <frank@thomas-alfeld.de>  Sun, 15 Jan 2006 12:54:19 +0100

boinc (5.2.15-1) experimental; urgency=low

  * New upstream release.

  [ Frank S. Thomas ]
  * debian/patches/:
    - Added 07_use-sensible-browser.dpatch. The BOINC Manager now uses
      "sensible-browser", which is part of the debianutils package, as
      fallback if wxWidgets' method to determine the default browser fails.
      Thanks to Olek Wojnar for the report and his helpful investigations.
  * debian/boinc-client.postrm: 
    - Be more verbose when removing the "boinc" user/group.
  * debian/boinc-manager.desktop:
    - Added "Path: /var/lib/boinc-client" so that the BOINC Manager can find
      the "gui_rpc_auth.cfg" file and does not ask for a password. This should
      be removed when the BOINC Manager is able to store passwords in its
      config file.
  * debian/control:
    - Added an extra space before the "Homepage" pseudo field according to the
      Developer's Reference, Section 6.2.4.
    - Added Christoph Martin <christoph.martin@uni-mainz.de> and
      Greg Norris <adric@debian.org> to Uploaders.
  * debian/copyright:
    - Added more copyright and license information for various files.
  * Created symlinks of headers and static libraries, which are required to
    build the SETI@home application, in "/usr/share/boinc-dev/".
  * Ship a default "gui_rpc_auth.cfg" file in "/etc/boinc-client/" and create
    a symlink in "/var/lib/boinc-client" to this file. Old "gui_rpc_auth.cfg"
    files are moved to "/etc/boinc-client/" before creating the symlink.

 -- Frank S. Thomas <frank@thomas-alfeld.de>  Mon,  9 Jan 2006 18:16:41 +0100

boinc (5.2.13a-1) experimental; urgency=low

  * New upstream release.

  [ Frank S. Thomas ]