@@ -1,2 +1,3 @@
 debian/extra/gui_rpc_auth.cfg   etc/boinc-client
+debian/extra/remote_hosts.cfg   etc/boinc-client
 debian/tmp/usr/bin/boinc_cmd    usr/bin
