@@ -1,0 +1,7 @@
+# This file contains a list of hostnames or IP adresses (one per line)
+# of remote hosts, that are allowed to connect and to control the local
+# BOINC core client via GUI RPCs.
+# Lines beginning with a # or a ; will be ignored.
+#
+#host.example.com
+#192.168.0.180
