@@ -78,6 +78,7 @@
 
   <refsect1>
     <title>OPTIONS</title>
+    <para></para>
 
     <variablelist>
       <varlistentry>
@@ -237,9 +238,11 @@
       </varlistentry>
 
       <varlistentry>
-        <term>
-          <option>--get_host_info</option>
-        </term>
+        <term><option>--get_host_info</option></term>
+        <listitem>
+          <para>Show system information about the host where the BOINC core
+            client is running.</para>
+        </listitem>
       </varlistentry>
 
       <varlistentry>
@@ -330,10 +333,10 @@
 
   <refsect1>
     <title>AUTHOR</title>
-    <para>This manual page was written by &dhusername; for the &debian;
-      project (but may be used by others). Permission is granted to copy,
-      distribute and/or modify this document under the terms of the &gnu;
-      General Public License, Version 2 or any later version published 
+    <para>This manual page was written by &dhusername; &lt;&dhemail;&gt; for
+      the &debian; project (but may be used by others). Permission is granted
+      to copy, distribute and/or modify this document under the terms of the
+      &gnu; General Public License, Version 2 or any later version published 
       by the Free Software Foundation.</para>
   </refsect1>
 </refentry>
