@@ -6,8 +6,10 @@ boinc (5.2.15-2) unstable; urgency=low
   [ Frank S. Thomas ]
   * Added boinc-manager.README.Debian to explain how to set the web browser
     that the BOINC Manager uses.
+  * Added the conffile "remote_hosts.cfg" to "/etc/boinc-client/". Old files
+    are handled the same way as old "gui_rpc_auth.cfg" files.
 
- -- Frank S. Thomas <frank@thomas-alfeld.de>  Sun, 15 Jan 2006 12:54:19 +0100
+ -- Frank S. Thomas <frank@thomas-alfeld.de>  Thu, 26 Jan 2006 19:25:20 +0100
 
 boinc (5.2.15-1) experimental; urgency=low
 
